--- a/view/templates/students/index.html
+++ b/view/templates/students/index.html
@@ -13,7 +13,7 @@
                 }).join("");
                 %>
             </ul>
-            <%= /*studentForm()*/ %>
+            <%= render('form') %>
         </body>
     </html>
 
